--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,10 @@
     "magnific-popup": "^1.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^1.4.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.0",
     "react-masonry-component": "^6.3.0",
     "react-meta-tags": "^1.0.0",
